--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
 <html>
-    <h2>This is a sample html file</h2>
+<head>
+    <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<body>
+<h2 id="demo" style="margin-left:35%;">This is a static webpage</h2>
+</body>
+<footer style="margin-left:42%;margin-top:15%;">
+        &copy Wipro Technologies
+</footer>
 </html>
