--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 <h2 id="demo" style="margin-left:35%;">This is a static webpage</h2>
 </body>
 <footer style="margin-left:42%;margin-top:15%;">
-        &copy Wipro Technologies
+        &copy Wipro Technologies digital
 </footer>
 </html>
