--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 <body>
 <h2 id="demo" style="margin-left:35%;">This is a static webpage</h2>
-</body>
+<img src="https://www.wipro.com/content/dam/nexus/en/brand/images/Wipro_Logo_RGB_PNG.png">
+    </body>
 <footer style="margin-left:42%;margin-top:15%;">
         &copy Wipro Technologies digital
 </footer>
