--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-<h2 id="demo" style="margin-left:35%;">This is a static webpage</h2>
-<img src="https://www.wipro.com/content/dam/nexus/en/brand/images/Wipro_Logo_RGB_PNG.png">
+<h2 id="demo" style="margin-left:40%;">Wipro-Adapt</h2>
+<img src="https://www.wipro.com/content/dam/nexus/en/brand/images/Wipro_Logo_RGB_PNG.png" height="60%" width="40%" style="margin-left:27%;margin-top:3%" >
     </body>
 <footer style="margin-left:42%;margin-top:15%;">
         &copy Wipro Technologies digital
