--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-<h2 id="demo" style="margin-left:40%;">Wipro-Adapt</h2>
-<img src="https://www.wipro.com/content/dam/nexus/en/brand/images/Wipro_Logo_RGB_PNG.png" height="60%" width="40%" style="margin-left:27%;margin-top:3%" >
+<h2 style="margin-left:40%;color:blue">Wipro-Adapt</h2>
+<img src="https://www.wipro.com/content/dam/nexus/en/brand/images/Wipro_Logo_RGB_PNG.png" height="60%" width="40%" style="margin-left:27%;margin-top:3%;" >
     </body>
-<footer style="margin-left:42%;margin-top:15%;">
+<footer style="margin-left:39%;margin-top:5%;">
         &copy Wipro Technologies digital
 </footer>
 </html>
