--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body>
-<div style="background-color: coral;">
+<body style="background-color: coral;">
 <h2 style="margin-left:40%;color:blue">Wipro-Adapt</h2>
 <img src="https://www.wipro.com/content/dam/nexus/en/brand/images/Wipro_Logo_RGB_PNG.png" height="60%" width="40%" style="margin-left:27%;margin-top:3%;" >
    
 <footer style="margin-left:41%;margin-top:5%; color:blue">
         &copy Wipro Technologies 
 </footer>
-</div>
  </body>
 </html>
